# JUCE-Project-Template

./: .clang-format  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build_test.yml
src/: CMakeLists.txt  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
test/: CMakeLists.txt  SimpleTestCase.cpp
